--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification : "google8a436e86da756337.html"
+google_site_verification : "kGzuJi8aJm5rQT9XnSZgTG159PLfVGxZz1LNJr_KvA4"
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
